--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "@react-three/fiber": "^8.17.10",
     "@react-three/drei": "^9.114.3",
+    "@react-three/xr": "^5.7.1",
     "three": "^0.170.0",
     "zustand": "^5.0.2",
     "uuid": "^10.0.0",
